2003-02-12  Glenn Randers-Pehrson <randeg@alum.rpi.edu>

	* coders/logo.c: updated logo.c to produce the GraphicsMagick logo.

2003-02-12  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* INSTALL-unix.txt: Document that default quantum depth is now 8.
	* VisualMagick/magick/magick_config.h.in: Default quantum depth is now 8.
	* configure.ac: Default quantum depth is now 8.
	* tests/Makefile.am: Test format types that require a size
	seperately since always specifying the size caused some formats
	(e.g. PCD) to improperly fail.

2003-02-11  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* www/NEWS.html: New HTML file for project news.
	* scripts/txt2html: New script for formatting text into HTML.
	* Makefile.am: Automated the generation of www/Changelog.html and
	www/NEWS.html.
	* coders/xpm.c (WritePICONImage): Close blob using correct image.
	* tests/Makefile.am (CHECK_SIZED_FILES): Added files to tests
	subdirectory so that tests don't need to use files from
	PerlMagick.
	* magick/image.c (TransformColorspace): New function to
	simplify/centralize colorspace transform requests.  Replaced calls
	to RGBTransformImage and TransformRGBImage throughout the code
	with calls to TransformColorspace.
	* IMDisplay: Disable save function since it is not implemented yet.

2003-02-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* PerlMagick/Magick.xs (SetAttribute): Support changing back to
	RGB or Transparent colorspace.

2002-02-10  Glenn Randers-Pehrson <randeg@alum.rpi.edu>

	* Brought MNG handling of final delay into compliance with MNG spec.

2003-02-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/bmp.c (WriteBMPImage): Added support for
	bits_per_pixel==4.
	(WriteBMPImage): Convert PseudoClass images with more than 256
	colors to DirectClass.
	(WriteBMPImage): Do not require 2-color images to pass the
	IsMonochromeImage() test before writing them as one-bit-per-pixel
	BMPs.  Decided to allow this after four readers (including Windows