@@ -1,3 +1,8 @@
+2003-02-12  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* magick/annotate.c (RenderFreetype): Used smarter code to prepare
+	the beta argument for AlphaComposite.
+
 2003-02-12  Glenn Randers-Pehrson <randeg@alum.rpi.edu>
 
 	* coders/logo.c: updated logo.c to produce the GraphicsMagick logo.
